Consuming named-amd lib.

--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "ember-qunit-notifications": "0.0.4",
     "qunit": "~1.15.0",
     "picnic": "https://github.com/picnicss/picnic.git",
-    "moment": "~2.8.3"
+    "moment": "~2.8.3",
+    "borrowers-dates": "~0.0.1"
   }
 }
