--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ember-cli-qunit": "0.1.0",
     "ember-data": "1.0.0-beta.10",
     "express": "^4.8.5",
-    "glob": "^4.0.5"
+    "glob": "^4.0.5",
+    "ember-cli-fill-murray": "0.1.0"
   }
 }
