--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
   "name": "borrowers",
   "dependencies": {
-    "handlebars": "~1.3.0",
+    "handlebars": "2.0.0",
     "jquery": "^1.11.1",
-    "ember": "1.7.0",
-    "ember-data": "1.0.0-beta.10",
+    "ember": "canary",
+    "ember-data": "1.0.0-beta.11",
     "ember-resolver": "~0.1.7",
     "loader.js": "stefanpenner/loader.js#1.0.1",
     "ember-cli-shims": "stefanpenner/ember-cli-shims#0.0.3",
@@ -16,5 +16,9 @@
     "picnic": "https://github.com/picnicss/picnic.git",
     "moment": "~2.8.3",
     "borrowers-dates": "~0.0.1"
+  },
+  "resolutions": {
+    "ember": "canary",
+    "handlebars": ">= 2.0.0 < 3.0.0"
   }
 }
