--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "broccoli-asset-rev": "0.3.1",
     "ember-cli": "0.1.2",
     "ember-cli-content-security-policy": "0.3.0",
+    "ember-cli-divshot": "^0.1.5",
     "ember-cli-fill-murray": "0.1.0",
     "ember-cli-htmlbars": "^0.2.1",
     "ember-cli-ic-ajax": "0.1.1",
