--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
   "name": "borrowers",
   "dependencies": {
-    "handlebars": "2.0.0",
+    "handlebars": "~1.3.0",
     "jquery": "^1.11.1",
-    "ember": "components/ember#canary",
+    "ember": "1.8.1",
     "ember-data": "1.0.0-beta.11",
     "ember-resolver": "~0.1.7",
     "loader.js": "stefanpenner/loader.js#1.0.1",
@@ -16,9 +16,5 @@
     "picnic": "https://github.com/picnicss/picnic.git",
     "moment": "~2.8.3",
     "borrowers-dates": "~0.0.1"
-  },
-  "resolutions": {
-    "ember": "canary",
-    "handlebars": ">= 2.0.0 < 3.0.0"
   }
 }
