--- a/package.json
+++ b/package.json
@@ -20,19 +20,18 @@
   "devDependencies": {
     "body-parser": "^1.2.0",
     "broccoli-asset-rev": "0.3.1",
+    "broccoli-ember-hbs-template-compiler": "^1.6.1",
     "ember-cli": "0.1.2",
     "ember-cli-content-security-policy": "0.3.0",
-    "ember-cli-divshot": "^0.1.5",
-    "ember-cli-fill-murray": "0.1.0",
-    "ember-cli-htmlbars": "^0.2.1",
+    "ember-export-application-global": "^1.0.0",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.1.0",
-    "ember-computed-change-gate": "0.0.1",
     "ember-data": "1.0.0-beta.11",
-    "ember-export-application-global": "^1.0.0",
     "express": "^4.8.5",
-    "glob": "^4.0.5"
-  },
-  "dependencies": {}
+    "glob": "^4.0.5",
+    "ember-computed-change-gate": "0.0.1",
+    "ember-cli-divshot": "^0.1.5",
+    "ember-cli-fill-murray": "0.1.0"
+  }
 }
