Add back dependencies so app can build

--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,8 @@
     "ember-qunit": "0.2.8",
     "ember-qunit-notifications": "0.0.7",
     "qunit": "~1.17.1",
-    "picnic": "~3.3.1"
+    "picnic": "~3.3.1",
+    "moment": "~2.9.0",
+    "borrowers-dates": "~0.0.1"
   }
 }
