--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "borrowers",
   "dependencies": {
-    "ember": "1.13.3",
+    "ember": "1.13.4",
     "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
     "ember-cli-test-loader": "ember-cli-test-loader#0.1.3",
     "ember-data": "1.13.5",
@@ -12,6 +12,8 @@
     "jquery": "^1.11.1",
     "loader.js": "ember-cli/loader.js#3.2.0",
     "qunit": "~1.17.1",
-    "picnic": "~4.1.1"
+    "picnic": "~4.1.1",
+    "moment": "~2.10.3",
+    "borrowers-dates": "~0.0.1"
   }
 }
