--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ember-data": "1.13.5",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
-    "emberx-select": "1.1.4"
+    "emberx-select": "1.1.4",
+    "moment": "^2.13.0"
   }
 }
